Switch to v3 as base model for entity mapping